area chart added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 		<div class="bar-chart"></div>
 	</div>
 
+	<div class="area-chart-container">
+		<div class="area-chart"></div>
+	</div>
+
 	<script type=module src=./js/index.js></script>	
 </body>
 </html>
