--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<div class="bar-chart"></div>
 	</div>
 
-	<div class="area-chart-container">
-		<div class="area-chart"></div>
+	<div class="line-chart-container">
+		<div class="line-chart"></div>
 	</div>
 
 	<script type=module src=./js/index.js></script>	
