added updateable pie chart

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 		<div class="line-chart"></div>
 	</div>
 
+	<div class="pie-chart-container">
+		<div class="pie-chart"></div>
+	</div>
+
 	<script type=module src=./js/index.js></script>	
 </body>
 </html>
