map module basic functionality

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	<script src=./js/d3.js></script>
 </head>
 <body>
+	
+	<div class="map-container">
+		<div class="map"></div>
+	</div>
 
 	<div class="bar-chart-container">
 		<div class="bar-chart"></div>
