some interactivity added

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>d3 playground</title>
+	<title>norniron General Elections Dashboard</title>
 	<link href="./css/styles.css" rel="stylesheet" type="text/css">
-	<script src=./js/d3.js></script>
+	
 </head>
 <body>
 	
 	<div class="map-container">
-		<div class="map"></div>
+		<div class="map-ireland"></div>
 	</div>
 
 	<div class="bar-chart-container">
@@ -24,6 +24,8 @@
 		<div class="pie-chart"></div>
 	</div>
 
+	
+	<script src=./js/d3.js></script>
 	<script type=module src=./js/index.js></script>	
 </body>
 </html>
