--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>norniron General Elections Dashboard</title>
+	<title>norniron General Elections Results Dashboard</title>
 	<link href="./css/styles.css" rel="stylesheet" type="text/css">
 	
 </head>
 <body>
+
+	<header class="header">
+		<h1>A Geneneral Elections Results Dashboard</h1>
+		<p>(for Norn-Iron)</p>
+	</header>
 	
 	<div class="map-container">
 		<div class="map-ireland"></div>
