--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 	<header class="header">
-		<h1>A Geneneral Elections Results Dashboard</h1>
+		<h1>A General Elections Results Dashboard</h1>
 		<p>(for Norn-Iron)</p>
 	</header>
 	
