added stacked chart with map interaction

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		
 		</main>
 
-		<div class="updateable-charts">
+		<section class="updateable-charts">
 
 			<div class="bar-chart"></div>
 		
@@ -31,7 +31,7 @@
 			
 			<div class="pie-chart"></div>
 		
-		</div>
+		</section>
 
 		
 		<footer class="footer"></footer>
