header + stack chart completed

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>norniron General Elections Results Dashboard</title>
+	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet"> 
 	<link href="./css/style.css" rel="stylesheet" type="text/css">
 	
 </head>
@@ -17,7 +18,30 @@
 
 		<main class="main">
 
-			<div class="main__display"></div>	
+			<div class="main__chart">
+
+				<div class="main__display-home">
+
+					<div class='main__display-home-block'>
+						<h4 class='main__display-home-heading'>Region:</h4>
+						<p class='main__display-home-para'>North of Ireland</p>
+					</div>
+
+					<div class='main__display-home-block'>
+						<h4 class='main__display-home-heading'>Constituencies:</h4>
+						<p class='main__display-home-para'>18</p>
+					</div>
+
+					<div class='main__display-home-block'>
+						<h4 class='main__display-home-heading'>Dataset:</h4>
+						<p class='main__display-home-para'>General Elections (2001 - 2019)</p>
+					</div>
+
+				</div>
+
+				<div class="main__display-chart"></div>
+				<div class="main__display-constit"></div>
+			</div>	
 			
 			<div class="main__map"></div>
 		
