--- a/index.html
+++ b/index.html
@@ -12,20 +12,25 @@
 	<div class="layout-grid">
 
 		<header class="header">
+
 			<h1 class="header__heading">General Elections <span>NI</span></h1>
 			<p class="header__paragraph">A <span>visual</span>isation</p>
+			
 		</header>
 
 		<main class="main">
 
 			<div class="main__chart"></div>
 			<div class="main__map"></div>	
-			<div class="main__dynamic"></div>
+			<!-- <div class="main__dynamic"></div> -->
 
-		
 		</main>
 
-		<section class="profile"></section>
+		<section class="profile">
+
+			<div class="profile__details"></div>
+		
+		</section>
 
 		<section class="updateable-charts">
 
