layout and functionality ready

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 		<section class="profile">
 
-			<div class="profile__details"></div>
+			<div class="profile__container"></div>
 		
 		</section>
 
