--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"/>
 	<title>General Elections NI - a visualisation</title>
-	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Montserrat:700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700%7CMontserrat:700&display=swap" rel="stylesheet">
 	<link href="./css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -27,12 +27,14 @@
 		</main>
 
 		<section class="profile">
-
+			<h2 class="profile__heading-ghost">Click on the map to see a constituency profile here</h2>
 			<div class="profile__container"></div>
 		
 		</section>
 
 		<section class="updateable-charts">
+
+			<h2 class="updateable-charts__heading-ghost">Click on the map to update the constituency charts below</h2>
 
 			<div class="bar-chart"></div>
 		
