--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<footer class="footer"><p>Built by <a href="https://github.com/rumack/milestone-2" target="_blank">RoRo</a></p></footer>
 
 	</div>
-
+	<!-- D3 library script and my own custom script -->
 	<script src=./js/d3.js></script>
 	<script type=module src=./js/index.js></script>	
 </body>
